--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-p {
+h1 {
   text-align: center;
   font-size: 60px;
   margin-top: 0px;
 }
+p {
+  text-align: center;
+  font-size: 40px;
+  margin-top: 0px;
+}
 </style>
-<center>Use your time wisely!</center>
 </head>
 <body>
+
+<center><h1>Use your time wisely!</h1></center>
 
 <p id="demo"></p>
 
