--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@ h1 {
   text-align: center;
   font-size: 60px;
   margin-top: 0px;
+  color: red;
 }
 p {
   text-align: center;
   font-size: 40px;
   margin-top: 0px;
+  color: blue;
 }
 </style>
 </head>
